--- a/portfolio/styles/globals.css
+++ b/portfolio/styles/globals.css
@@ -119,9 +119,10 @@ a {
   content: '';
   display: inline-block;
   background: url(../public/images/arrow-up-right-from-square-solid.svg);
-  width: 16px;
-  height: 16px;
-  margin-left: 8px;
+  width: 14px;
+  height: 14px;
+  margin-left: 4px;
+  margin-right: 2px;
   vertical-align: -1px;
 }
 
