--- a/portfolio/styles/globals.css
+++ b/portfolio/styles/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;600;800&display=swap');
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -77,7 +79,8 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  color: #2a2a2a;
+  color: #323232;
+  font-family: 'Noto Sans JP', sans-serif;
 }
 
 body {}
@@ -93,7 +96,10 @@ a {
   }
 }
 
+
 /* post */
+.post {}
+
 .post h2 {
   margin: 8px 0;
   font-size: 20px;
@@ -131,6 +137,13 @@ a {
   margin-left: 4px;
   margin-right: 2px;
   vertical-align: -1px;
+}
+
+.post iframe {
+  max-width: 600px;
+  aspect-ratio: 16/9;
+  width: 100%;
+  height: auto;
 }
 
 @media screen and (min-width: 700px) {
