--- a/portfolio/styles/globals.css
+++ b/portfolio/styles/globals.css
@@ -80,7 +80,9 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   color: #323232;
-  font-family: 'Noto Sans JP', sans-serif;
+  /* font-family: 'Noto Sans JP', sans-serif; */
+  font-feature-settings: "palt";
+  letter-spacing: 1.5px;
 }
 
 body {}
@@ -137,6 +139,10 @@ a {
   margin-left: 4px;
   margin-right: 2px;
   vertical-align: -1px;
+}
+
+.post p {
+  line-height: 1.8;
 }
 
 .post iframe {
