--- a/portfolio/styles/globals.css
+++ b/portfolio/styles/globals.css
@@ -142,6 +142,7 @@ a {
 }
 
 .post p {
+  font-size: 16px;
   line-height: 1.8;
 }
 
@@ -153,8 +154,13 @@ a {
 }
 
 @media screen and (min-width: 700px) {
-  .post h2 {
+  .post p {
     font-size: 20px;
+    line-height: 1.8;
+  }
+
+  .post h2 {
+    font-size: 24px;
     font-weight: bold;
   }
 }
