--- a/portfolio/styles/globals.css
+++ b/portfolio/styles/globals.css
@@ -104,14 +104,18 @@ a {
 
 .post h2 {
   margin: 8px 0;
-  font-size: 20px;
-  font-weight: bold;
+  font-size: 24px;
+  font-weight: 400;
 }
 
 .post h3 {
   margin: 8px 0;
   font-size: 20px;
-  font-weight: bold;
+  font-weight: 400;
+}
+
+.post h4 {
+  font-weight: 400;
 }
 
 .post ol {
@@ -160,7 +164,6 @@ a {
   }
 
   .post h2 {
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 32px;
   }
 }
