--- a/portfolio/styles/globals.css
+++ b/portfolio/styles/globals.css
@@ -157,6 +157,11 @@ a {
   height: auto;
 }
 
+.post code {
+  background: ghostwhite;
+  overflow: scroll;
+}
+
 @media screen and (min-width: 700px) {
   .post p {
     font-size: 20px;
