--- a/portfolio/styles/globals.css
+++ b/portfolio/styles/globals.css
@@ -80,6 +80,7 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   color: #323232;
+  background: #f3f0ee;
   /* font-family: 'Noto Sans JP', sans-serif; */
   /* font-feature-settings: "palt"; */
   /* letter-spacing: 1.5px; */
